testing/macro-tests/tests/ui/index_reserved_namespace_segment.stderr
error: index name 'UiIndexedEntity|~reserved|id' uses reserved '~' namespace
  --> tests/ui/index_reserved_namespace_segment.rs:18:20
   |
18 |     index(fields = "id"),
   |                    ^^^^
